fix: fix the bug of skill page. fix the arrow and iconfont behind of list-name

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -253,7 +253,7 @@ section.container h2 {
     color: orange;
     margin: 10px;
 }
-.skill .content .skill-content .icon-language {
+.skill .content .skill-content .skill-head div .iconfont {
     position: relative;
     top: 40px;
     left: -50px;
